--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "font-awesome": "^4.7.0",
-    "node-sass": "^5.0.0",
+    "sass": "^1.0.0",
+    "sass-loader": "^10.0.0",
     "postcss-copy": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -61,7 +62,6 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
-    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3"
   },
