--- a/static/config/config.json
+++ b/static/config/config.json
@@ -100,6 +100,11 @@
             "enabled": true
         },
         {
+            "type": "geovisto-tool-legend",
+            "id": "geovisto-tool-legend",
+            "enabled": true
+        },
+        {
             "type": "geovisto-tool-layer-map",
             "id": "geovisto-tool-layer-map",
             "enabled": true,
