--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/leaflet": "^1.5.19",
     "@types/leaflet-draw": "^1.0.5",
     "@types/leaflet.markercluster": "^1.4.4",
+    "@types/markdown-it": "^12.2.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/rfdc": "^1.2.0",
@@ -91,6 +92,7 @@
     "leaflet-sidebar-v2": "3.2.2",
     "leaflet-snap": "^0.0.4",
     "leaflet.markercluster": "^1.4.1",
+    "markdown-it": "^12.3.2",
     "martinez-polygon-clipping": "^0.7.0",
     "osmtogeojson": "^3.0.0-beta.4",
     "polygon-clipping": "^0.15.2",
