--- a/static/config/config.json
+++ b/static/config/config.json
@@ -34,6 +34,13 @@
                 "checkButton": true
             },
             {
+                "tool": "geovisto-tool-info",
+                "enabled": true,
+                "name": "Info",
+                "icon": "<i class=\"fa fa-info\"></i>",
+                "checkButton": false
+            },
+            {
                 "tool": "geovisto-tool-layer-map",
                 "enabled": true,
                 "name": "Map layer settings",
