Feature #31: Add configuration and order of legend rendering

--- a/static/config/config.json
+++ b/static/config/config.json
@@ -102,7 +102,11 @@
         {
             "type": "geovisto-tool-legend",
             "id": "geovisto-tool-legend",
-            "enabled": true
+            "enabled": true,
+            "tools": [
+                "geovisto-tool-layer-choropleth",
+                "geovisto-tool-layer-marker"
+            ]
         },
         {
             "type": "geovisto-tool-layer-map",
