--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "leaflet-sidebar-v2": "3.2.2",
     "leaflet-snap": "^0.0.4",
     "leaflet.markercluster": "^1.4.1",
+    "leaflet.heat": "^0.2.0",
     "martinez-polygon-clipping": "^0.7.0",
     "osmtogeojson": "^3.0.0-beta.4",
     "polygon-clipping": "^0.15.2",
