--- a/static/config/config.json
+++ b/static/config/config.json
@@ -167,6 +167,21 @@
             "id": "geovisto-tool-layer-drawing",
             "enabled": false,
             "layerName": "GeoJSON creator"
+        },
+        {
+            "type": "geovisto-tool-layer-heat",
+            "id": "geovisto-tool-layer-heat",
+            "enabled": true,
+            "layerName": "Heat layer",
+            "data": {
+                "latitude": "lat",
+                "longitude": "long",
+                "radius": "10",
+                "intensity": "cases",
+                "gradient": "Default",
+                "blur": "10",
+                "zoom": "normal"
+            }
         }
     ]
 }
