Feature #37: Add rounding to choropleth, implementation done for legend

--- a/static/config/config.json
+++ b/static/config/config.json
@@ -133,7 +133,9 @@
             "scaling": "median",
             "range": 7,
             "customColor": true,
-            "color": "#e32400"
+            "color": "#e32400",
+            "units": "$",
+            "round": 1
             }
         },
         {
