--- a/static/config/config-hierarchy_covidData.json
+++ b/static/config/config-hierarchy_covidData.json
@@ -68,7 +68,7 @@
           "checkButton": true
         },
         {
-            "tool": "geovisto-tool-downloader",
+            "tool": "geovisto-tool-geoDownloader",
             "enabled": true,
             "name": "Downloader tool",
             "icon": "<i class=\"fa fa-cloud-download\" />",
@@ -101,8 +101,8 @@
       "enabled": true
     },
     {
-        "type": "geovisto-tool-downloader",
-        "id": "geovisto-tool-downloader",
+        "type": "geovisto-tool-geoDownloader",
+        "id": "geovisto-tool-geoDownloader",
         "enabled": true
     },
     {
@@ -123,7 +123,7 @@
       "layerName": "Hierarchy layer",
       "HierarchyConfig": [{
         "name" : "Hierarchy covid",
-        "aggregation" : true,
+        "aggregation" : false,
             "hierarchy": [
                 {
                     "id": "CZ_7_0",
