Feature #27: Added Hierarchy tool configuration.

--- a/static/config/config-hierarchy_covidData.json
+++ b/static/config/config-hierarchy_covidData.json
@@ -123,7 +123,7 @@
       "layerName": "Hierarchy layer",
       "HierarchyConfig": [{
         "name" : "Hierarchy covid",
-        "aggregation" : false,
+        "aggregation" : true,
             "hierarchy": [
                 {
                     "id": "CZ_7_0",
