Feature #27, #31: Hierarchy and Legend integration

--- a/static/config/config-hierarchyTool.json
+++ b/static/config/config-hierarchyTool.json
@@ -198,6 +198,12 @@
         "chartAggregationFn": ""
       },
       "stories": []
+    },
+    {
+        "type": "geovisto-tool-layer-drawing",
+        "id": "geovisto-tool-layer-drawing",
+        "enabled": false,
+        "layerName": "GeoJSON creator"
     }
   ]
 }
