Feature #27: Hierarchy connections demo updated

--- a/static/config/config-hierarchy_connection.json
+++ b/static/config/config-hierarchy_connection.json
@@ -162,6 +162,12 @@
           "geoData":"Hierarchy Connection",
           "animateDirection": false
         }
+      },
+      {
+          "type": "geovisto-tool-layer-drawing",
+          "id": "geovisto-tool-layer-drawing",
+          "enabled": false,
+          "layerName": "GeoJSON creator"
       }
     ]
   }
