--- a/static/config/config-hierarchy_covidData.json
+++ b/static/config/config-hierarchy_covidData.json
@@ -93,7 +93,7 @@
             "id": "geovisto-tool-hierarchy",
             "enabled": true,
             "layerName": "Hierarchy layer",
-            "HierarchyConfig": [{
+            "hierarchies": [{
               "name" : "Hierarchy covid",
               "aggregation" : true,
                   "hierarchy": [
