--- a/package.json
+++ b/package.json
@@ -1,101 +1,103 @@
 {
-  "name": "geovisto-map",
-  "version": "1.0.0",
-  "description": "",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "style": "dist/index.css",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "clean": "rimraf dist",
-    "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
-    "start": "npm run storybook"
-  },
-  "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-react": "^7.12.10",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@storybook/addon-essentials": "^6.1.14",
-    "@storybook/react": "^6.1.14",
-    "@types/d3": "^6.2.0",
-    "@types/geojson": "^7946.0.7",
-    "@types/leaflet": "^1.5.19",
-    "@types/leaflet-draw": "^1.0.5",
-    "@types/leaflet.markercluster": "^1.4.4",
-    "@types/markdown-it": "^12.2.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/rfdc": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "autoprefixer": "^10.2.1",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.17.0",
-    "font-awesome": "^4.7.0",
-    "postcss-copy": "^7.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.36.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.29.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.12.5",
-    "@turf/circle": "^6.3.0",
-    "@turf/difference": "^6.3.0",
-    "@turf/line-offset": "^6.3.0",
-    "@turf/line-to-polygon": "^6.3.0",
-    "@turf/turf": "^6.3.0",
-    "@turf/union": "^6.3.0",
-    "babel-preset-react-app": "^10.0.0",
-    "d3": "^6.2.0",
-    "d3-3-5-5": "^0.0.3",
-    "d3-geo": "^1.11.9",
-    "d3-geo-projection": "^2.7.1",
-    "d3-queue": "^3.0.7",
-    "d3-scale": "^3.2.1",
-    "leaflet": "^1.7.1",
-    "leaflet-draw": "^1.0.4",
-    "leaflet-draw-drag": "^0.4.5",
-    "leaflet-geometryutil": "^0.9.3",
-    "leaflet-geosearch": "^3.2.2",
-    "leaflet-path-drag": "^1.1.0",
-    "leaflet-path-transform": "^1.1.3",
-    "leaflet-pather": "^0.1.17",
-    "leaflet-sidebar-v2": "3.2.2",
-    "leaflet-snap": "^0.0.4",
-    "leaflet.markercluster": "^1.4.1",
-    "markdown-it": "^12.3.2",
-    "martinez-polygon-clipping": "^0.7.0",
-    "osmtogeojson": "^3.0.0-beta.4",
-    "polygon-clipping": "^0.15.2",
-    "rfdc": "^1.3.0",
-    "sass": "^1.56.1"
-  }
+    "name": "geovisto-map",
+    "version": "1.0.0",
+    "description": "",
+    "license": "MIT",
+    "main": "dist/index.js",
+    "module": "dist/index.es.js",
+    "style": "dist/index.css",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "engines": {
+        "node": ">=10"
+    },
+    "scripts": {
+        "clean": "rimraf dist",
+        "storybook": "start-storybook -p 6006",
+        "storybook:build": "build-storybook",
+        "build": "rollup -c",
+        "build:watch": "rollup -c -w",
+        "start": "npm run storybook"
+    },
+    "peerDependencies": {
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-transform-runtime": "^7.12.10",
+        "@babel/preset-react": "^7.12.10",
+        "@rollup/plugin-babel": "^5.2.2",
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^11.1.0",
+        "@storybook/addon-essentials": "^6.1.14",
+        "@storybook/react": "^6.1.14",
+        "@types/d3": "^6.2.0",
+        "@types/geojson": "^7946.0.7",
+        "@types/leaflet": "^1.5.19",
+        "@types/leaflet-draw": "^1.0.5",
+        "@types/leaflet.heat": "^0.2.1",
+        "@types/leaflet.markercluster": "^1.4.4",
+        "@types/markdown-it": "^12.2.3",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/rfdc": "^1.2.0",
+        "@typescript-eslint/eslint-plugin": "^4.13.0",
+        "@typescript-eslint/parser": "^4.13.0",
+        "autoprefixer": "^10.2.1",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "css-loader": "^5.0.1",
+        "eslint": "^7.17.0",
+        "font-awesome": "^4.7.0",
+        "postcss-copy": "^7.1.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "rimraf": "^3.0.2",
+        "rollup": "^2.36.1",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.0",
+        "rollup-plugin-typescript2": "^0.29.0",
+        "sass-loader": "^10.1.1",
+        "style-loader": "^2.0.0",
+        "typescript": "^4.1.3"
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.12.5",
+        "@turf/circle": "^6.3.0",
+        "@turf/difference": "^6.3.0",
+        "@turf/line-offset": "^6.3.0",
+        "@turf/line-to-polygon": "^6.3.0",
+        "@turf/turf": "^6.3.0",
+        "@turf/union": "^6.3.0",
+        "babel-preset-react-app": "^10.0.0",
+        "d3": "^6.2.0",
+        "d3-3-5-5": "^0.0.3",
+        "d3-geo": "^1.11.9",
+        "d3-geo-projection": "^2.7.1",
+        "d3-queue": "^3.0.7",
+        "d3-scale": "^3.2.1",
+        "leaflet": "^1.7.1",
+        "leaflet-draw": "^1.0.4",
+        "leaflet-draw-drag": "^0.4.5",
+        "leaflet-geometryutil": "^0.9.3",
+        "leaflet-geosearch": "^3.2.2",
+        "leaflet-path-drag": "^1.1.0",
+        "leaflet-path-transform": "^1.1.3",
+        "leaflet-pather": "^0.1.17",
+        "leaflet-sidebar-v2": "3.2.2",
+        "leaflet-snap": "^0.0.4",
+        "leaflet.heat": "^0.2.0",
+        "leaflet.markercluster": "^1.4.1",
+        "markdown-it": "^12.3.2",
+        "martinez-polygon-clipping": "^0.7.0",
+        "osmtogeojson": "^3.0.0-beta.4",
+        "polygon-clipping": "^0.15.2",
+        "rfdc": "^1.3.0",
+        "sass": "^1.55.0"
+    }
 }
