--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
         "rollup-plugin-typescript2": "^0.29.0",
         "sass-loader": "^10.1.1",
         "style-loader": "^2.0.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "date-fns": "^2.23.0"        
     },
     "dependencies": {
         "@babel/runtime": "^7.12.5",
