Feature #9: fixed imports, refactoring

--- a/static/config/config-demo1.json
+++ b/static/config/config-demo1.json
@@ -150,7 +150,7 @@
     {
       "type": "geovisto-tool-timeline",
       "id": "geovisto-tool-timeline",
-      "enabled": false,
+      "enabled": true,
       "layerName": "Timeline",
       "data": {
         "timePath": "",
