--- a/static/config/config.json
+++ b/static/config/config.json
@@ -219,17 +219,14 @@
 		{
 			"type": "geovisto-tool-timeline",
 			"id": "geovisto-tool-timeline",
-			"enabled": false,
+			"enabled": true,
 			"layerName": "Timeline",
 			"data": {
 				"timePath": "",
 				"stepTimeLength": 3000,
 				"transitionDuration": 2500,
-				"storyEnabled": false,
 				"story": "",
-				"realTimeEnabled": false,
 				"granularity": "",
-				"chartEnabled": false,
 				"chartValuePath": "",
 				"chartAggregationFn": ""
 			},
